@@ -38,6 +38,8 @@
 <p>2017-12-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/cut.c (GetCutColors): Fix Coverity CID 10181: &quot;Null
+pointer dereferences&quot;. SetImagePixels() may return NULL.</li>
 <li>coders/rgb.c (ReadRGBImage): Fix SourceForge issue #523
 &quot;heap-buffer-overflow&quot;.  Similar issue to cmyk.c.</li>
 <li>coders/gray.c (ReadGRAYImage): Fix SourceForge issue #522
